address logic